refactor: 람다를 메서드 참조로 변경 및 불필요한 코드 단순화